--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,3 @@
 <div id="content">
-  <h2>Welcome to MIEA : Meta Information Economy Application</h2>
+  <h2>Welcome to MIEA : Monthly Income Expense Application</h2>
 </div>
