--- a/app/views/home/income.html.erb
+++ b/app/views/home/income.html.erb
@@ -2,40 +2,45 @@
   <h3>Enter Income Details</h3><br />
   
   <%= error_messages_for :income %>
+  
   <% form_for :income do |f| %>
 
-    <label>Enter Particular</label><br />
+    <label>Particular</label><br />
 
     <%= f.text_field :particular %><br /><br />
 
-    <label>Enter Description</label><br />
+    <label>Description</label><br />
 
     <%= f.text_area(:description, :size => "35x3") %><br /><br />
 
-    <label>Enter Amount</label><br />
+    <label>Date</label><br />
 
-    <%= f.text_field(:amount, :size=>6, :maxlength=>6) %><br /><br />
+    <%= calendar_date_select_tag :created_at, nil, :time=>true %><br /><br />
+    
+    <label>Amount</label><br />
+
+    <%= f.text_field(:amount, :size=>6, :maxlength=>6) %><br />
+    <label style="font-size: smaller">*Amount in Rupees</label><br /><br />
 
     <%= f.submit "Save" %> <br /><br />
 
   <% end %>
 
-  <% if @all_income %>
+  <% if @all_income.size > 0 %>
     <table border="1">
       <tr>
-      <th>Particular</th>
-      <th>Description</th>
-      <th>Amount</th>
+        <%= content_tag(:th,"Particular")%>
+        <%= content_tag(:th,"Description")%>
+        <%= content_tag(:th,"Amount")%>
       </tr>
-    <% for all_income in @all_income  %>
-      <tr>
-        <td><%= all_income.particular %></td>
-        <td><%= all_income.description %></td>
-        <td><%= all_income.amount %></td>
-      </tr>
-    <% end %>
+      <% for all_income in @all_income  %>
+        <tr>
+          <td><%= all_income.particular %></td>
+          <td><%= (all_income.description.strip.blank?) ? "-" : all_income.description %></td>
+          <td><%= all_income.amount %></td>
+        </tr>
+      <% end %>
     </table>
   <% end %><br />
-
-  <h6>*Amount in Rupees</h6>
+  
 </div>
