--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,9 +3,17 @@
     <title>MIEA</title>
 
     <%= javascript_include_tag :defaults %>
+    <%= javascript_include_tag "jquery-1.4.2.js" %>
+    <%= javascript_include_tag "calendar_date_select" %>
+    <%= calendar_date_select_includes params[:style]%>
+    
+    <script>
+     $j = jQuery.noConflict();
+
+   </script>
 
     <%= stylesheet_link_tag "default" %>
-
+        
     <div id="header">
       <div id="logo">
         <h1><%= link_to "MIEA", root_path %> </h1>
@@ -17,7 +25,7 @@
           <%= content_tag(:li, link_to("Income", income_path), :class=>(request.path == income_path) ? "current_page_item" : nil)  %>
           <%= content_tag(:li, link_to("Expense", expense_path), :class=>(request.path == expense_path) ? "current_page_item" : nil)  %>
           <%= content_tag(:li, link_to("Balance", view_balance_book_path), :class=>(request.path == view_balance_book_path) ? "current_page_item" : nil)  %>
-          <%= content_tag(:li, link_to("Twitter Data", twitterdata_path), :class=>(request.path == view_balance_book_path) ? "current_page_item" : nil)  %>
+          <%= content_tag(:li, link_to("Twitter Data", twitterdata_path), :class=>(request.path == twitterdata_path) ? "current_page_item" : nil)  %>
           <%#*<li><a href="#">Contact</a></li>%>
         </ul>
       </div>
