twitter data fetch with httparty and changes in home controller

--- a/app/views/home/view_balance_book.html.erb
+++ b/app/views/home/view_balance_book.html.erb
@@ -23,5 +23,6 @@
     <% end %>
   </table><br />
 
-  <h6>*Amount in Rupees</h6>
+  <label style="font-size: smaller">*Amount in Rupees</label><br /><br />
+  
 </div>
