pdf generation new

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
    </script>
 
     <%= stylesheet_link_tag "default" %>
+    <%= stylesheet_link_tag "sexy_flash" %>
         
     <div id="header">
       <div id="logo">
