--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
 <div id="content">
+  <%#= flash[:message]%>
+  <p> <%= sexy_flash :timeout => 2, :duration => 2 %> </p>
   <h2>Welcome to MIEA : Monthly Income Expense Application</h2>
 </div>
